# ai-study-buddy

./: .env.example  .env.production  .firebaserc  .gitignore  .mailmap  Echelon-capstone-report-draft.md  Makefile  PRD.md  RAG.md  README.md  STYLE_GUIDE.MD  chat-with-pdf.md  eslint.config.js  feature-2-implementation-tracker.md  feature-4-implementation-tracker.md  feature-5-implementation-tracker.md  feature-6-implementation-tracker.md  features.md  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  persistent-chat.md  storage.rules  vite.config.ts
ai_model/: data_loader  model_trainer
ml/: Dockerfile  Dockerfile.cloudrun  README.md  cloudrun.env.yaml  docker-compose.yml  pyproject.toml  requirements.txt
ml/artifacts/reports/: data_validation.json  loso_aggregate.json
ml/artifacts/reports/presentation/training_progress/: experiment_label_mapping.csv
ml/artifacts/reports/runs/20260210-220926/: capstone_report.md
ml/artifacts/reports/runs/20260210-230828/: capstone_report.md
ml/artifacts/reports/runs/20260210-234104/: capstone_report.md
ml/artifacts/reports/runs/20260211-000054/: capstone_report.md
ml/artifacts/reports/runs/20260211-004330/: capstone_report.md
ml/configs/: baseline.yaml  exp_hires_v3.yaml  exp_regularized_v2.yaml  exp_stability_v1.yaml  exp_v4.yaml  participant_map.example.yaml
ml/scripts/: generate_presentation_graphs.py  generate_training_progress_plots.py  smoke_inference.sh
ml/studybuddy_ml/: __init__.py  capstone_report.py  cli.py  pipeline.py  serve_api.py  temporal.py
(+165 files in other folders)
